--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -388,10 +388,16 @@
       \end{itemize}
       De kan vælges ved at bruge taster "1" eller "2".
       
-      \item{\texttt{setup}}~\\
-      Setup funktionen håndtere start af et nyt spil.
+      Udover det førnævnte, så printer menu-funktionen en header som
+      vi har lavet i ascii art.
+
+    \item{\texttt{setup}}~\\
+      Setup funktionen håndtere start af et nyt spil. Her kan man
+      vælge hvor mange spillere der skal være med. Hvad de skal hedde,
+      og om de skal være en computer eller en spiller.
       
       \item{\texttt{main}}~\\
+        
     \end{description}
       
       
