Added page to Ref

--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -64,7 +64,7 @@
 \definecolor{redstrings}{rgb}{0.5,0,0}
 \definecolor{lightgray}{RGB}{240, 240, 240}
 
-\newcommand{\namedref}[1]{\autoref{#1} - \nameref{#1}}
+\newcommand{\namedref}[1]{\autoref{#1} - \nameref{#1} på Side \pageref{#1}}
 
 \lstdefinelanguage{FSharp}
 				{morekeywords={\#load, \#r, let, new, match, with, rec, open, module, namespace, type, of, member, and, for, in, do, begin, end, fun, function, try, mutable, if, then, else, List, Set, Sudoku, Seq, false, true, Assert, printfn, print, sprintf, when, ->, >, ::, printf, yield, this},
