--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -281,10 +281,10 @@
       der laver en tekstrepræsentaiton af spillerens hånd og score.
 
       \subsubsection*{Card}
-      Et spillekort har en kulør, se Sektionen \ref{sssec:suits}, og en værdi/index der repræsentere kortet,
-      hvor 11 - 13 er (bonde, dame, konge) og numrene 2 - 10 har deres respektive værdi og et es har værdien 1.
+      Et spillekort har en kulør, se Sektionen \ref{sssec:suits}, og en værdi/index der repræsentere kortet.
+      Hvor 11 - 13 er (bonde, dame, konge) og numrene 2 - 10 har deres respektive værdi og et es har værdien 1.
       Denne værdi må ikke sammenblandes med den værdi kortet har i Blackjack,
-      da alle billedkort har samme værdi - og derfor vil den værdi ikke være unik.
+      da alle billedkort har samme værdi.Derfor vil den værdi ikke være unik.
       Denne \lstinline$value$ sammenlædet med \lstinline$suit$ skaber en unik værdi,
       der kan bruges til at reprænsetere kortet når spillepladen vises.
 
