--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -435,10 +435,10 @@
     Til at sørge for at vores funktioner virker korrekt har vi
     anvendt unit-testing på klasserne Card, Player og Hand.
     Disse tests findes i filen \path{src/tests.fsx}, som skal
-    compiles med symbolet TEST, hvilket kan gøres med
+    compiles med symbolet TEST. Dette kan gøres med
     kommandolinjeflaget -d:TEST og derefter kan køres i en
-    terminal, hvor der angives true eller false for hver test
-    der udføres, hvor true angiver at testen har givet det
+    terminal. Der angives true eller false for hver test
+    der udføres. Her angiver true at testen har givet det
     forventede resultat og false angiver en fejl i koden.
 
 	\section{Diskussion og konlusion} \label{sec:conclusion}
