no merge configt

--- a/rapport/blackjack.tex
+++ b/rapport/blackjack.tex
@@ -293,7 +293,7 @@
 
       \subsubsection*{Suits} \label{sssec:suits}
       En enumeration er, specielt i OOP, en god måde at repræsentere forskellige værdier for det sammen field, 
-      når der kun er de mulige værdier for et field. I vores tilfælde, med \lstinline$\texttt{Card}.suit$,
+      når der kun er de mulige værdier for et field. I vores tilfælde, med \lstinline$Card.suit$,
       har vi kun de fire værdier og derfor ift validering, struktur m.m valgte vi at bruge en enumeration.
 
       \begin{figure}[H]
